Fix minor alignment issue

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -241,6 +241,10 @@
     margin-bottom: var(--space-9);
 }
 
+.blog-post-body > .author-container {
+    margin-top: var(--space-1);
+}
+
 .blog-post:not(.toc)>.blog-post-body>.author-container {
     display: none;
 }
